Update website with new image.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   "description": "",
   "thumbnailUrl": "https://zazivljenje.github.io/favicon.ico",
   "sameAs": [
-      "\u003clink\u003e", "\u003clink2\u003e"
+      
   ]
 }
 </script>
@@ -125,43 +125,16 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://mcusercontent.com/25dd1cea8b1f0035fb99af327/images/3fbfb823-24be-5851-04f6-c71108912b53.png" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
+        <img draggable="false" src="https://zazivljenje.github.io/images/front-sodelujoce-organizacije.png" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
             height="120" width="120" />
         <h1>Novičnik Za življenje!</h1>
         <span>Želimo graditi kulturo, ki ceni vsakršno življenje.</span><div class="social-icons" >
-    <a href="%3clink%3e" target="_blank" rel="noopener noreferrer me"
-        title="&lt;Platform&gt;">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
-    <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
-</svg>
-    </a>
-    <a href="%3clink2%3e" target="_blank" rel="noopener noreferrer me"
-        title="&lt;Platform 2&gt;">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
-    <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
-</svg>
-    </a>
 </div>
 
         <div class="buttons">
             <a class="button" href="/archive" rel="noopener" title="Archive">
                 <span class="button-inner">
                     Archive
-                </span>
-            </a>
-            <a class="button" href="https://github.com/" rel="noopener" title="Github">
-                <span class="button-inner">
-                    Github&nbsp;
-                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
-                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
-                        <path d="M15 3h6v6"></path>
-                        <path d="M10 14L21 3"></path>
-                    </svg>
                 </span>
             </a>
         </div>
