--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <img draggable="false" src="https://zazivljenje.github.io/images/front-sodelujoce-organizacije.png" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
             height="120" width="120" />
         <h1>Novičnik Za življenje!</h1>
-        <span>Želimo graditi kulturo, ki ceni vsakršno življenje.</span><div class="social-icons" >
+        <span>Želimo graditi kulturo, ki ceni življenje vsakega človeka.</span><div class="social-icons" >
 </div>
 
         <div class="buttons">
