--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
 <main class="main"><div class="profile">
     <div class="profile_inner">
         <img draggable="false" src="https://zazivljenje.github.io/images/front-sodelujoce-organizacije.png" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
-            height="120" width="120" />
+            height="300" width="400" />
         <h1>Novičnik Za življenje!</h1>
         <span>Želimo graditi kulturo, ki ceni življenje vsakega človeka.</span><div class="social-icons" >
 </div>
 
         <div class="buttons">
-            <a class="button" href="/archive" rel="noopener" title="Archive">
+            <a class="button" href="/archive" rel="noopener" title="Arhiv">
                 <span class="button-inner">
-                    Archive
+                    Arhiv
                 </span>
             </a>
         </div>
