Update webpage domain.

--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://zazivljenje.github.io/404.html">
+<link rel="canonical" href="https://zazivljenje.com/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fc220c15db4aef0318bbf30adc45d33d4d7c88deff3238b23eb255afdc472ca6.css" integrity="sha256-/CIMFdtK7wMYu/MK3EXTPU18iN7/MjiyPrJVr9xHLKY=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://zazivljenje.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://zazivljenje.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://zazivljenje.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://zazivljenje.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="https://zazivljenje.github.io/safari-pinned-tab.svg">
+<link rel="icon" href="https://zazivljenje.com/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://zazivljenje.com/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://zazivljenje.com/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://zazivljenje.com/apple-touch-icon.png">
+<link rel="mask-icon" href="https://zazivljenje.com/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -57,7 +57,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://zazivljenje.github.io/404.html" />
+<meta property="og:url" content="https://zazivljenje.com/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://zazivljenje.github.io/" accesskey="h" title="Za življenje! (Alt + H)">Za življenje!</a>
+            <a href="https://zazivljenje.com/" accesskey="h" title="Za življenje! (Alt + H)">Za življenje!</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -113,7 +113,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="https://zazivljenje.github.io/">Za življenje!</a></span> · 
+        <span>&copy; 2024 <a href="https://zazivljenje.com/">Za življenje!</a></span> · 
 
     <span>
         Powered by
