--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://zazivljenje.github.io/">
+<link rel="canonical" href="https://zazivljenje.com/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fc220c15db4aef0318bbf30adc45d33d4d7c88deff3238b23eb255afdc472ca6.css" integrity="sha256-/CIMFdtK7wMYu/MK3EXTPU18iN7/MjiyPrJVr9xHLKY=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://zazivljenje.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://zazivljenje.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://zazivljenje.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://zazivljenje.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="https://zazivljenje.github.io/safari-pinned-tab.svg">
+<link rel="icon" href="https://zazivljenje.com/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://zazivljenje.com/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://zazivljenje.com/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://zazivljenje.com/apple-touch-icon.png">
+<link rel="mask-icon" href="https://zazivljenje.com/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://zazivljenje.github.io/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://zazivljenje.com/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -59,7 +59,7 @@
 </noscript><meta property="og:title" content="Za življenje!" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://zazivljenje.github.io/" />
+<meta property="og:url" content="https://zazivljenje.com/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Za življenje!"/>
@@ -70,9 +70,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Za življenje!",
-  "url": "https://zazivljenje.github.io/",
+  "url": "https://zazivljenje.com/",
   "description": "",
-  "thumbnailUrl": "https://zazivljenje.github.io/favicon.ico",
+  "thumbnailUrl": "https://zazivljenje.com/favicon.ico",
   "sameAs": [
       
   ]
@@ -95,7 +95,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://zazivljenje.github.io/" accesskey="h" title="Za življenje! (Alt + H)">Za življenje!</a>
+            <a href="https://zazivljenje.com/" accesskey="h" title="Za življenje! (Alt + H)">Za življenje!</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -125,7 +125,7 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://zazivljenje.github.io/images/front-sodelujoce-organizacije.png" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
+        <img draggable="false" src="https://zazivljenje.com/images/front-sodelujoce-organizacije.png" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
             height="300" width="400" />
         <h1>Novičnik Za življenje!</h1>
         <span>Želimo graditi kulturo, ki ceni življenje vsakega človeka.</span><div class="social-icons" >
@@ -144,7 +144,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="https://zazivljenje.github.io/">Za življenje!</a></span> · 
+        <span>&copy; 2024 <a href="https://zazivljenje.com/">Za življenje!</a></span> · 
 
     <span>
         Powered by
